// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Theme Selection > should default to a dark theme when terminal background is dark and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│    1. ANSI Dark                              │                                                 │ │
│    2. Atom One Dark                          │ 1 # function                                    │ │
│    3. Ayu Dark                               │ 2 def fibonacci(n):                             │ │
│ ●  4. Default Dark                           │ 3     a, b = 0, 1                               │ │
│    5. Dracula Dark                           │ 4     for _ in range(n):                        │ │
│    6. GitHub Dark                            │ 5         a, b = b, a + b                       │ │
│    7. Holiday Dark                           │ 6     return a                                  │ │
│    8. Shades Of Purple Dark                  │                                                 │ │
│    9. Solarized Dark                         │ 1 - print("Hello, " + name)                     │ │
│   10. ANSI Light                             │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Ayu Light                              │                                                 │ │
│   12. Default Light                          │                                                 │ │
│ ▼                                            │ How themes and terminals interact:              │ │
│                                              │   • TrueColor (Hex): Modern terminals render    │ │
│                                              │   hex codes exactly. They are not overridden by │ │
│                                              │   terminal app themes.                          │ │
│                                              │   • ANSI Names: Colors like 'red' or 'green'    │ │
│                                              │   (used in our ANSI theme) are mapped to your   │ │
│                                              │   terminal app's specific palette.              │ │
│                                              │   • Default colors: When Name or Value is       │ │
│                                              │   '(blank)', the app uses your terminal's       │ │
│                                              │   default foreground/background.                │ │
│                                              │   • Compatibility: In terminals with limited    │ │
│                                              │   color, hex colors are automatically           │ │
│                                              │   approximated to the closest available ANSI    │ │
│                                              │   color.                                        │ │
│                                              │                                                 │ │
│                                              │ ┌─────────────────────────────────────────────┐ │ │
│                                              │ │ ValuName         Usage                      │ │ │
│                                              │ │ e                                           │ │ │
│                                              │ └─────────────────────────────────────────────┘ │ │
│                                              │                                                 │ │
│                                              │   #…  background.pMain terminal background      │ │
│                                              │       rimary      color                         │ │
│                                              │   …   backgroundSubtle background for message   │ │
│                                              │       .message  blocks                          │ │
│                                              │   #…  background.Background for the input       │ │
│                                              │       input      prompt                         │ │
│                                              │   …   backgroundBackground for added lines in   │ │
│                                              │       .diff.addediffs                           │ │
│                                              │       d                                         │ │
│                                              │   …   backgroun Background for removed lines    │ │
│                                              │       d.diff.re in diffs                        │ │
│                                              │       moved                                     │ │
│                                              │  (bltext.prim Primary text color (uses          │ │
│                                              │  ankary       terminal default if blank)        │ │
│                                              │  )                                              │ │
│                                              │  #6C7text.secondar Secondary/dimmed text        │ │
│                                              │  086 y             color                        │ │
│                                              │  #89Btext.link   Hyperlink and highlighting     │ │
│                                              │  4FA             color                          │ │
│                                              │  #CBAtext.accent   Accent color for emphasis    │ │
│                                              │  6F7                                            │ │
│                                              │  (bltext.resp Color for model response text     │ │
│                                              │  ankonse      (uses terminal default if         │ │
│                                              │  )            blank)                            │ │
│                                              │  #3d3border.defaul Standard border color        │ │
│                                              │  f51 t                                          │ │
│                                              │  #89 border.focBorder color when an element     │ │
│                                              │  B4F used      is focused                       │ │
│                                              │  A                                              │ │
│                                              │  #F3status.er Color for error messages and      │ │
│                                              │  8BAror       critical status                   │ │
│                                              │  8                                              │ │
│                                              │  #A6 status.sucColor for success messages and   │ │
│                                              │  E3A cess      positive status                  │ │
│                                              │  1                                              │ │
│                                              │  #F9status.war Color for warnings and           │ │
│                                              │  E2Aning       cautionary status                │ │
│                                              │  F                                              │ │
│                                              │  #479ui.gradien Array of colors used for UI     │ │
│                                              │  E4  t          gradients                       │ │
│                                              │  #847A                                          │ │
│                                              │  CE                                             │ │
│                                              │  #C367                                          │ │
│                                              │  7F                                             │ │
│                                              │                                                 │ │
│                                              │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`Initial Theme Selection > should default to a light theme when terminal background is light and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│    1. ANSI Light                             │                                                 │ │
│    2. Ayu Light                              │ 1 # function                                    │ │
│ ●  3. Default Light                          │ 2 def fibonacci(n):                             │ │
│    4. GitHub Light                           │ 3     a, b = 0, 1                               │ │
│    5. Google Code Light                      │ 4     for _ in range(n):                        │ │
│    6. Solarized Light                        │ 5         a, b = b, a + b                       │ │
│    7. Xcode Light                            │ 6     return a                                  │ │
│    8. ANSI Dark (Incompatible)               │                                                 │ │
│    9. Atom One Dark (Incompatible)           │ 1 - print("Hello, " + name)                     │ │
│   10. Ayu Dark (Incompatible)                │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Default Dark (Incompatible)            │                                                 │ │
│   12. Dracula Dark (Incompatible)            │                                                 │ │
│ ▼                                            │ How themes and terminals interact:              │ │
│                                              │   • TrueColor (Hex): Modern terminals render    │ │
│                                              │   hex codes exactly. They are not overridden by │ │
│                                              │   terminal app themes.                          │ │
│                                              │   • ANSI Names: Colors like 'red' or 'green'    │ │
│                                              │   (used in our ANSI theme) are mapped to your   │ │
│                                              │   terminal app's specific palette.              │ │
│                                              │   • Default colors: When Name or Value is       │ │
│                                              │   '(blank)', the app uses your terminal's       │ │
│                                              │   default foreground/background.                │ │
│                                              │   • Compatibility: In terminals with limited    │ │
│                                              │   color, hex colors are automatically           │ │
│                                              │   approximated to the closest available ANSI    │ │
│                                              │   color.                                        │ │
│                                              │                                                 │ │
│                                              │ ┌─────────────────────────────────────────────┐ │ │
│                                              │ │ ValuName         Usage                      │ │ │
│                                              │ │ e                                           │ │ │
│                                              │ └─────────────────────────────────────────────┘ │ │
│                                              │                                                 │ │
│                                              │   #…  background.pMain terminal background      │ │
│                                              │       rimary      color                         │ │
│                                              │   …   backgroundSubtle background for message   │ │
│                                              │       .message  blocks                          │ │
│                                              │   #…  background.Background for the input       │ │
│                                              │       input      prompt                         │ │
│                                              │   …   backgroundBackground for added lines in   │ │
│                                              │       .diff.addediffs                           │ │
│                                              │       d                                         │ │
│                                              │   …   backgroun Background for removed lines    │ │
│                                              │       d.diff.re in diffs                        │ │
│                                              │       moved                                     │ │
│                                              │  (bltext.prim Primary text color (uses          │ │
│                                              │  ankary       terminal default if blank)        │ │
│                                              │  )                                              │ │
│                                              │  #97atext.secondar Secondary/dimmed text        │ │
│                                              │  0b0 y             color                        │ │
│                                              │  #3B8text.link   Hyperlink and highlighting     │ │
│                                              │  2F6             color                          │ │
│                                              │  #8B5text.accent   Accent color for emphasis    │ │
│                                              │  CF6                                            │ │
│                                              │  (bltext.resp Color for model response text     │ │
│                                              │  ankonse      (uses terminal default if         │ │
│                                              │  )            blank)                            │ │
│                                              │  #d2dborder.defaul Standard border color        │ │
│                                              │  6dc t                                          │ │
│                                              │  #3B border.focBorder color when an element     │ │
│                                              │  82F used      is focused                       │ │
│                                              │  6                                              │ │
│                                              │  #DDstatus.er Color for error messages and      │ │
│                                              │  4C4ror       critical status                   │ │
│                                              │  C                                              │ │
│                                              │  #3C status.sucColor for success messages and   │ │
│                                              │  A84 cess      positive status                  │ │
│                                              │  B                                              │ │
│                                              │  #D5status.war Color for warnings and           │ │
│                                              │  A40ning       cautionary status                │ │
│                                              │  A                                              │ │
│                                              │  #479ui.gradien Array of colors used for UI     │ │
│                                              │  E4  t          gradients                       │ │
│                                              │  #847A                                          │ │
│                                              │  CE                                             │ │
│                                              │  #C367                                          │ │
│                                              │  7F                                             │ │
│                                              │                                                 │ │
│                                              │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`Initial Theme Selection > should use the theme from settings even if terminal background suggests a different theme type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│ ●  1. ANSI Dark                              │                                                 │ │
│    2. Atom One Dark                          │ 1 # function                                    │ │
│    3. Ayu Dark                               │ 2 def fibonacci(n):                             │ │
│    4. Default Dark                           │ 3     a, b = 0, 1                               │ │
│    5. Dracula Dark                           │ 4     for _ in range(n):                        │ │
│    6. GitHub Dark                            │ 5         a, b = b, a + b                       │ │
│    7. Holiday Dark                           │ 6     return a                                  │ │
│    8. Shades Of Purple Dark                  │                                                 │ │
│    9. Solarized Dark                         │ 1 - print("Hello, " + name)                     │ │
│   10. ANSI Light                             │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Ayu Light                              │                                                 │ │
│   12. Default Light                          │                                                 │ │
│ ▼                                            │ How themes and terminals interact:              │ │
│                                              │   • TrueColor (Hex): Modern terminals render    │ │
│                                              │   hex codes exactly. They are not overridden by │ │
│                                              │   terminal app themes.                          │ │
│                                              │   • ANSI Names: Colors like 'red' or 'green'    │ │
│                                              │   (used in our ANSI theme) are mapped to your   │ │
│                                              │   terminal app's specific palette.              │ │
│                                              │   • Default colors: When Name or Value is       │ │
│                                              │   '(blank)', the app uses your terminal's       │ │
│                                              │   default foreground/background.                │ │
│                                              │   • Compatibility: In terminals with limited    │ │
│                                              │   color, hex colors are automatically           │ │
│                                              │   approximated to the closest available ANSI    │ │
│                                              │   color.                                        │ │
│                                              │                                                 │ │
│                                              │ ┌─────────────────────────────────────────────┐ │ │
│                                              │ │ ValuName         Usage                      │ │ │
│                                              │ │ e                                           │ │ │
│                                              │ └─────────────────────────────────────────────┘ │ │
│                                              │                                                 │ │
│                                              │   #…  background.pMain terminal background      │ │
│                                              │       rimary      color                         │ │
│                                              │   …   backgroundSubtle background for message   │ │
│                                              │       .message  blocks                          │ │
│                                              │   #…  background.Background for the input       │ │
│                                              │       input      prompt                         │ │
│                                              │   …   backgroundBackground for added lines in   │ │
│                                              │       .diff.addediffs                           │ │
│                                              │       d                                         │ │
│                                              │   …   backgroun Background for removed lines    │ │
│                                              │       d.diff.re in diffs                        │ │
│                                              │       moved                                     │ │
│                                              │  (bltext.prim Primary text color (uses          │ │
│                                              │  ankary       terminal default if blank)        │ │
│                                              │  )                                              │ │
│                                              │  #6C7text.secondar Secondary/dimmed text        │ │
│                                              │  086 y             color                        │ │
│                                              │  #89Btext.link   Hyperlink and highlighting     │ │
│                                              │  4FA             color                          │ │
│                                              │  #CBAtext.accent   Accent color for emphasis    │ │
│                                              │  6F7                                            │ │
│                                              │  (bltext.resp Color for model response text     │ │
│                                              │  ankonse      (uses terminal default if         │ │
│                                              │  )            blank)                            │ │
│                                              │  #3d3border.defaul Standard border color        │ │
│                                              │  f51 t                                          │ │
│                                              │  #89 border.focBorder color when an element     │ │
│                                              │  B4F used      is focused                       │ │
│                                              │  A                                              │ │
│                                              │  #F3status.er Color for error messages and      │ │
│                                              │  8BAror       critical status                   │ │
│                                              │  8                                              │ │
│                                              │  #A6 status.sucColor for success messages and   │ │
│                                              │  E3A cess      positive status                  │ │
│                                              │  1                                              │ │
│                                              │  #F9status.war Color for warnings and           │ │
│                                              │  E2Aning       cautionary status                │ │
│                                              │  F                                              │ │
│                                              │  #479ui.gradien Array of colors used for UI     │ │
│                                              │  E4  t          gradients                       │ │
│                                              │  #847A                                          │ │
│                                              │  CE                                             │ │
│                                              │  #C367                                          │ │
│                                              │  7F                                             │ │
│                                              │                                                 │ │
│                                              │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ThemeDialog Snapshots > should render correctly in scope selector mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Apply To                                                                                       │
│ ● 1. User Settings                                                                               │
│   2. Workspace Settings                                                                          │
│   3. System Settings                                                                             │
│                                                                                                  │
│ (Use Enter to apply scope, Tab to select theme, Esc to close)                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ThemeDialog Snapshots > should render correctly in theme selection mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│ ●  1. ANSI Dark (Matches terminal)           │                                                 │ │
│    2. Atom One Dark                          │ 1 # function                                    │ │
│    3. Ayu Dark                               │ 2 def fibonacci(n):                             │ │
│    4. Default Dark                           │ 3     a, b = 0, 1                               │ │
│    5. Dracula Dark                           │ 4     for _ in range(n):                        │ │
│    6. GitHub Dark                            │ 5         a, b = b, a + b                       │ │
│    7. Holiday Dark                           │ 6     return a                                  │ │
│    8. Shades Of Purple Dark                  │                                                 │ │
│    9. Solarized Dark                         │ 1 - print("Hello, " + name)                     │ │
│   10. ANSI Light                             │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Ayu Light                              │                                                 │ │
│   12. Default Light                          │                                                 │ │
│ ▼                                            │ How themes and terminals interact:              │ │
│                                              │   • TrueColor (Hex): Modern terminals render    │ │
│                                              │   hex codes exactly. They are not overridden by │ │
│                                              │   terminal app themes.                          │ │
│                                              │   • ANSI Names: Colors like 'red' or 'green'    │ │
│                                              │   (used in our ANSI theme) are mapped to your   │ │
│                                              │   terminal app's specific palette.              │ │
│                                              │   • Default colors: When Name or Value is       │ │
│                                              │   '(blank)', the app uses your terminal's       │ │
│                                              │   default foreground/background.                │ │
│                                              │   • Compatibility: In terminals with limited    │ │
│                                              │   color, hex colors are automatically           │ │
│                                              │   approximated to the closest available ANSI    │ │
│                                              │   color.                                        │ │
│                                              │                                                 │ │
│                                              │ ┌─────────────────────────────────────────────┐ │ │
│                                              │ │ ValuName         Usage                      │ │ │
│                                              │ │ e                                           │ │ │
│                                              │ └─────────────────────────────────────────────┘ │ │
│                                              │                                                 │ │
│                                              │   #…  background.pMain terminal background      │ │
│                                              │       rimary      color                         │ │
│                                              │   …   backgroundSubtle background for message   │ │
│                                              │       .message  blocks                          │ │
│                                              │   #…  background.Background for the input       │ │
│                                              │       input      prompt                         │ │
│                                              │   …   backgroundBackground for added lines in   │ │
│                                              │       .diff.addediffs                           │ │
│                                              │       d                                         │ │
│                                              │   …   backgroun Background for removed lines    │ │
│                                              │       d.diff.re in diffs                        │ │
│                                              │       moved                                     │ │
│                                              │  (bltext.prim Primary text color (uses          │ │
│                                              │  ankary       terminal default if blank)        │ │
│                                              │  )                                              │ │
│                                              │  #6C7text.secondar Secondary/dimmed text        │ │
│                                              │  086 y             color                        │ │
│                                              │  #89Btext.link   Hyperlink and highlighting     │ │
│                                              │  4FA             color                          │ │
│                                              │  #CBAtext.accent   Accent color for emphasis    │ │
│                                              │  6F7                                            │ │
│                                              │  (bltext.resp Color for model response text     │ │
│                                              │  ankonse      (uses terminal default if         │ │
│                                              │  )            blank)                            │ │
│                                              │  #3d3border.defaul Standard border color        │ │
│                                              │  f51 t                                          │ │
│                                              │  #89 border.focBorder color when an element     │ │
│                                              │  B4F used      is focused                       │ │
│                                              │  A                                              │ │
│                                              │  #F3status.er Color for error messages and      │ │
│                                              │  8BAror       critical status                   │ │
│                                              │  8                                              │ │
│                                              │  #A6 status.sucColor for success messages and   │ │
│                                              │  E3A cess      positive status                  │ │
│                                              │  1                                              │ │
│                                              │  #F9status.war Color for warnings and           │ │
│                                              │  E2Aning       cautionary status                │ │
│                                              │  F                                              │ │
│                                              │  #479ui.gradien Array of colors used for UI     │ │
│                                              │  E4  t          gradients                       │ │
│                                              │  #847A                                          │ │
│                                              │  CE                                             │ │
│                                              │  #C367                                          │ │
│                                              │  7F                                             │ │
│                                              │                                                 │ │
│                                              │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
